
 -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 05 Jun 2020 18:06:28 +0200

univention-dhcp (13.0.0-7) unstable; urgency=medium

  * Bug #51136: make UCR templates compatible to python3

 -- Florian Best <best@univention.de>  Tue, 21 Apr 2020 15:46:47 +0200

univention-dhcp (13.0.0-6) unstable; urgency=medium

  * Bug #49281: Debug log configuration option for dhcp

 -- Max Christian Pohle <pohle@univention.de>  Thu, 16 Jan 2020 11:13:18 +0100

univention-dhcp (13.0.0-2) unstable; urgency=medium

  * Bug #46805: Fixed spelling mistake

 -- Max Christian Pohle <pohle@univention.de>  Mon, 13 Jan 2020 16:22:18 +0100

univention-dhcp (13.0.0-1) unstable; urgency=medium

  * Bug #48326: UCS-4.4-0 version bump

 -- Philipp Hahn <hahn@univention.de>  Fri, 14 Dec 2018 15:12:43 +0100

univention-dhcp (12.0.0-5) unstable; urgency=medium

  * Bug #47065: bindpwdfile support

 -- Felix Botner <botner@univention.de>  Thu, 24 May 2018 14:17:38 +0200

univention-dhcp (12.0.0-4) unstable; urgency=low

  * Bug #46120: Fix Python syntax error in dhcpd.conf

 -- Philipp Hahn <hahn@univention.de>  Thu, 08 Mar 2018 15:18:33 +0100

univention-dhcp (12.0.0-3) unstable; urgency=low

  * Bug #46515: Create initial DHCP subnet
  * Bug #46120: Update UCR templates for Debian Stretch

 -- Philipp Hahn <hahn@univention.de>  Tue, 06 Mar 2018 17:22:13 +0100

univention-dhcp (12.0.0-2) unstable; urgency=medium

  * Bug #46311: increase runsv timeout to 30 seconds

 -- Jürn Brodersen <brodersen@univention.de>  Wed, 21 Feb 2018 15:31:03 +0100

univention-dhcp (12.0.0-1) unstable; urgency=medium

  * Bug #45841: UCS-4.3 version bump

 -- Jürn Brodersen <brodersen@univention.de>  Mon, 11 Dec 2017 14:40:34 +0100

univention-dhcp (11.0.0-9) unstable; urgency=low

  * Bug #45065: Always start DHCP runsv service

 -- Philipp Hahn <hahn@univention.de>  Tue, 25 Jul 2017 10:57:17 +0200

univention-dhcp (11.0.0-8) unstable; urgency=low

  * Bug #43470: Handle UCRV */autostart through systemd
