@@ -1,45 +1,0 @@
-#!/bin/sh
-@%@UCRWARNING=# @%@
-#
-# Copyright 2004-2020 Univention GmbH
-#
-# https://www.univention.de/
-#
-# All rights reserved.
-#
-# The source code of this program is made available
-# under the terms of the GNU Affero General Public License version 3
-# (GNU AGPL V3) as published by the Free Software Foundation.
-#
-# Binary versions of this program provided by Univention to you as
-# well as other copyrighted, protected or trademarked materials like
-# Logos, graphics, fonts, specific documentations and configurations,
-# cryptographic keys etc. are subject to a license agreement between
-# you and Univention and not subject to the GNU AGPL V3.
-#
-# In the case you use this program under the terms of the GNU AGPL V3,
-# the program is provided in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public
-# License with the Debian GNU/Linux or Univention distribution in file
-# /usr/share/common-licenses/AGPL-3; if not, see
-# <https://www.gnu.org/licenses/>.
-
-### BEGIN INIT INFO
-# Provides:          isc-dhcp-server
-# Required-Start:    $remote_fs $network $syslog
-# Required-Stop:     $remote_fs $network $syslog
-# Should-Start:      $local_fs slapd $named
-# Should-Stop:       $local_fs slapd
-# Default-Start:
-# Default-Stop:      0 1 6
-# Short-Description: DHCP server
-# Description:       Dynamic Host Configuration Protocol Server
-### END INIT INFO
-
-. /lib/lsb/init-functions
-log_action_msg "This script is disabled, use /etc/init.d/univention-dhcp."
-exit 0
