@@ -1,2 +1,0 @@
-0004-56: conffiles/etc/init.d/isc-dhcp-server
-0018-2: debian/univention-dhcp.dirs
