@@ -1,2 +1,0 @@
-etc/runit/univention
-etc/runit/univention-dhcp
