@@ -1,125 +1,0 @@
-#!/bin/sh
-#
-# Univention DHCP
-#  dhcp init script
-#
-# Copyright 2004-2020 Univention GmbH
-#
-# https://www.univention.de/
-#
-# All rights reserved.
-#
-# The source code of this program is made available
-# under the terms of the GNU Affero General Public License version 3
-# (GNU AGPL V3) as published by the Free Software Foundation.
-#
-# Binary versions of this program provided by Univention to you as
-# well as other copyrighted, protected or trademarked materials like
-# Logos, graphics, fonts, specific documentations and configurations,
-# cryptographic keys etc. are subject to a license agreement between
-# you and Univention and not subject to the GNU AGPL V3.
-#
-# In the case you use this program under the terms of the GNU AGPL V3,
-# the program is provided in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public
-# License with the Debian GNU/Linux or Univention distribution in file
-# /usr/share/common-licenses/AGPL-3; if not, see
-# <https://www.gnu.org/licenses/>.
-
-### BEGIN INIT INFO
-# Provides:          univention-dhcp
-# Required-Start:    $remote_fs $network $syslog
-# Required-Stop:     $remote_fs $network $syslog
-# Should-Start:      $local_fs slapd $named
-# Should-Stop:       $local_fs slapd
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: DHCP server
-# Description:       Dynamic Host Configuration Protocol Server
-### END INIT INFO
-
-PATH=/sbin:/bin:/usr/sbin:/usr/bin
-
-[ -x /usr/sbin/dhcpd ] || exit 0
-[ -x /etc/runit/univention/univention-dhcp ] || exit 0
-
-. /lib/lsb/init-functions
-NAME='dhcpd'
-DESC=$(get_lsb_header_val "$0" Short-Description)
-
-DHCPD_DEFAULT="${DHCPD_DEFAULT:-/etc/default/isc-dhcp-server}"
-[ -f "$DHCPD_DEFAULT" ] && . "$DHCPD_DEFAULT"
-DHCPD_CONF=${DHCPD_CONF:-/etc/dhcp/dhcpd.conf}
-# try to read pid file name from config file, with fallback to /var/run/dhcpd.pid
-if [ -z "$DHCPD_PID" ]; then
-	DHCPD_PID=$(sed -n -e 's/^[ \t]*pid-file-name[ \t]*"(.*)"[ \t]*;.*$/\1/p;T;q' < "$DHCPD_CONF" 2>/dev/null)
-fi
-DHCPD_PID="${DHCPD_PID:-/var/run/dhcpd.pid}"
-
-test_config () {
-	local tmp rv
-	tmp=$(dhcpd -t $OPTIONS -cf "$DHCPD_CONF" 2>&1)
-	rv=$?
-	if [ $rv -ne 0 ]; then
-		echo "dhcpd self-test failed with $rv. Check $DHCPD_CONF."
-		echo "The error was: "
-		echo "$tmp"
-		# exit 1  # Bug #45065
-	fi
-	touch /var/lib/dhcp/dhcpd.leases
-}
-
-case "$1" in
-	start)
-		# check ucr autostart setting
-		if [ -f "/usr/share/univention-config-registry/init-autostart.lib" ]; then
-			. "/usr/share/univention-config-registry/init-autostart.lib"
-			check_autostart dhcpd dhcpd/autostart
-		fi
-		test_config
-		log_daemon_msg "Starting $DESC" "$NAME"
-		sv -w 30 start univention-dhcp
-		log_end_msg $?
-		;;
-	stop)
-		log_daemon_msg "Stopping $DESC" "$NAME"
-		sv -w 30 stop univention-dhcp
-		log_end_msg $?
-		;;
-	restart|force-reload)
-		# check ucr autostart setting
-		if [ -f "/usr/share/univention-config-registry/init-autostart.lib" ]; then
-			. "/usr/share/univention-config-registry/init-autostart.lib"
-			check_autostart dhcpd dhcpd/autostart
-		fi
-		test_config
-		log_daemon_msg "Restarting $DESC" "$NAME"
-		sv -w 30 restart univention-dhcp 1>/dev/null
-		log_end_msg $?
-		;;
-	crestart)
-		# check ucr autostart setting
-		if [ -f "/usr/share/univention-config-registry/init-autostart.lib" ]; then
-			. "/usr/share/univention-config-registry/init-autostart.lib"
-			check_autostart dhcpd dhcpd/autostart
-		fi
-		test_config
-		if sv status /etc/runit/univention-dhcp | grep -q ^run:
-		then
-			"$0" restart
-		else
-			log_action_msg "sv status return no running dhcpd, don't need to restart."
-		fi
-		;;
-	status)
-		status_of_proc -p "$DHCPD_PID" "$NAME" "$DESC" && exit 0 || exit $?
-		;;
-	*)
-		echo "Usage: $0 {start|stop|restart|crestart|force-reload|status}"
-		exit 1
-		;;
-esac
