@@ -1,1 +1,0 @@
-/usr/share/univention-runit/sleep-dynamic etc/runit/univention-dhcp/finish
