@@ -13,9 +13,5 @@ Variables: domainname
 Variables: dhcpd/ldap/debug
 
 Type: file
-File: etc/init.d/isc-dhcp-server
-Mode: 0755
-
-Type: file
 File: etc/logrotate.d/univention-dhcp
 Variables: logrotate/.*
