@@ -1,0 +1,24 @@
+[Unit]
+Description=ISC DHCP Server for IPv4
+Documentation=man:dhcpd(8)
+After=network.target
+After=nss-lookup.target
+After=slapd.service
+ConditionPathExists=/etc/dhcp/dhcpd.conf
+ConditionPathExists=/var/lib/dhcp/dhcpd.leases
+
+[Service]
+Type=simple
+Restart=on-failure
+RestartSec=10s
+RemainAfterExit=no
+EnvironmentFile=-/etc/default/isc-dhcp-server
+PIDFile=/var/run/dhcpd.pid
+ExecStartPre=
+ExecStartPre=/usr/sbin/dhcpd -t -4 -q -cf /etc/dhcp/dhcpd.conf
+ExecStart=
+ExecStart=/usr/sbin/dhcpd -f -4 -q -cf /etc/dhcp/dhcpd.conf $INTERFACESv4
+ExecStop=
+
+[Install]
+Alias=univention-dhcp.service
